--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -483,3 +483,94 @@ input:checked + .slider:before
 
 .slider.round:before 
 	border-radius: 50%
+
+
+.slider-medium
+	overflow: hidden
+	padding: 50px 0
+	.slider-medium__wrapper
+		display: flex
+		.slider-medium__item
+			margin-right: 40px
+			cursor: pointer
+			.slider-medium__thumbnail
+				position: relative
+				overflow: hidden
+				border-radius: 14px
+				.slider-medium__image
+					transition: .2s all
+			.medium-item__title
+				font-weight: 700
+				font-size: 16px
+				line-height: 20px
+				color: #19202C
+				margin: 10px 0 5px 0				
+			.medium-item__text
+				display: flex
+				justify-content: space-between
+				font-weight: 400
+				font-size: 12px
+				line-height: 15px
+				color: #C2C2C2
+				margin: 0
+				.medium-text__wrapper
+					width: 155px
+					display: flex
+					justify-content: space-between
+					align-items: center
+			.slider-medium__duration
+				position: absolute
+				bottom: 10px
+				right: 10px
+				padding: 3px 9px
+				background: #000000
+				mix-blend-mode: normal
+				opacity: 0.3
+				border-radius: 12px		
+				color: #ffffff
+		.slider-medium__item:hover .slider-medium__thumbnail .slider-medium__image	
+			transform: scale(1.04)		 		
+
+.slider-header
+	display: flex
+	align-items: center
+	padding-right: 150px
+	margin: 0 0 30px 0 
+	position: relative
+	.slider-header__image
+		margin-right: 20px 
+	.slider-header__title
+		font-weight: 700
+		font-size: 26px
+		line-height: 33px
+		color: #19202C
+		margin: 0
+	.slider-header__text
+		margin: 0 0 0 20px 
+		font-weight: 400
+		font-size: 16px
+		line-height: 20px
+		color: #C2C2C2				
+	.slider-navigation
+		right: 150px 
+		position: absolute
+		width: 66px
+		height: 28px
+		display: flex
+		justify-content: space-between	
+		.slider-navigation__item
+			height: 28px
+			width: 28px
+			border-radius: 50%
+			background: #000000
+			mix-blend-mode: normal
+			opacity: 0.24 
+			display: flex
+			align-items: center
+			justify-content: center
+			overflow: hidden
+			img
+				transition: .1s all
+		.slider-navigation__item:hover
+			img
+				transform: scale(1.1)			
