--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -13,7 +13,7 @@
 					object-fit: cover
 
 	.content-player
-		margin: 60px 205px 60px 0
+		margin: 55px 205px 60px 0
 		max-width: 1120px
 		.content-player__image
 			width: 540px
@@ -23,13 +23,21 @@
 				height: auto
 				object-fit: cover
 		.content-player__description
-			width: calc(100% - 572px)
+			width: calc(100% - 540px)
 
 	.top-navigation
 		margin-left: calc(100% - 1298px)
 
 	.content
-		width: calc(100% - 305px)
+		width: calc(100% - 315px)
+
+	.content.content_full
+		width: calc(100% - 245px)
+		margin: 0 0 0 65px
+		overflow: hidden	
+
+	.content-main, .content-top, .content-header
+		margin-right: 70px	
 
 @media only screen and (max-width: 1600px)
 	.videoplayer
@@ -145,6 +153,7 @@
 			padding: 0 16px 16px 
 			margin: 0 auto
 			.nav-item
+				margin-right: 40px
 				.nav-item__link
 					font-size: 14px
 					line-height: 18px
@@ -212,6 +221,14 @@
 
 @media only screen and (max-width : 576px)
 
+	.content.content_full
+		margin: 0 0 0 0
+		overflow: hidden
+		width: 100%	
+
+	.content-main, .content-top, .content-header
+		margin-right: 0	
+
 	body
 		background: #FFFFFF
 
@@ -221,6 +238,9 @@
 				font-size: 20px
 				line-height: 25px
 		.videoplayer-summary
+			border-bottom: 1px solid rgba(216, 216, 216, 0.5)
+			padding: 20px 0
+			margin-bottom: 20px
 			.videoplayer-button
 				font-size: 16px
 				line-height: 20px			
@@ -252,6 +272,7 @@
 			.videoplayer-navigation__text
 				font-size: 12px
 				line-height: 15px
+				align-self: flex-start
 			.videoplayer-navigation__buttons
 				margin-top: 20px
 				.video-button
@@ -308,9 +329,6 @@
 					.gallery-medium__image
 						height: 100%
 						width: auto					
-
-	 .header
-		display: none	
 	
 	.sidebar
 		justify-content: center	
@@ -343,15 +361,72 @@
 						margin: 0
 					.categories-item__text
 						font-size: 10px
-						line-height: 13px						
+						line-height: 13px
+
 	.sidebar__subscriptions
-		display: none	
+		display: none
+
 	.sidebar-settings
 		display: none				
 
+	.header.header-home
+		.mobile-nav
+			display: flex
 
+	.header.header-channel
+		.top-userpic, .logo-youtube
+			display: none
+		.mobile-title
+			display: flex
+
+	.header.header-video
+		.top-userpic
+			display: none
+	.header
+		.header_right
+			display: flex
+			align-items: center
+			.mobile-nav
+				width: auto
+				margin-right: 25px		
+
+	.header		
+		.mobile-nav
+			display: flex
+			justify-content: space-between
+			width: 78px
 
 @media only screen and (max-width : 480px)
+
+	.switch 
+		width: 30px
+		height: 18px
+		margin-left: 11px
+
+	.slider:before 
+		position: absolute
+		content: ""
+		height: 16px
+		width: 16px
+		left: 1px
+		bottom: 1px
+		background-color: #CCCCCC
+		-webkit-transition: .4s
+		transition: .4s
+
+	input:checked + .slider:before
+		background-color: #2196F3
+
+	input:focus + .slider 
+		box-shadow: 0 0 1px #2196F3
+
+	input:checked + .slider:before 
+		-webkit-transform: translateX(12px)
+		-ms-transform: translateX(12px)
+		transform: translateX(12px)
+
+	.slider.round 
+		border-radius: 18px
 
 	.toggle
 		.switch-text
@@ -390,3 +465,6 @@
 					width: 288px
 					height: 150px
 
+@media only screen and (min-width : 1600px)
+	.main
+		min-height: 1104px
