--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -9,6 +9,27 @@ body
 	font-family: 'Mulish', sans-serif
 	background: #F2F2F2
 
+.section-home
+	padding-top: 20px
+
+.main
+	display: flex
+	width: 100%
+	position: relative
+
+.button-regular
+	background: $red-color
+	padding: 10px 20px			
+	border-radius: 20px
+	color: #fff
+	text-decoration: none
+	cursor: pointer
+	transition: .2s ease
+	&:hover
+		background: #CD0000
+		color: #ffffff
+
+//Header
 .header
 	padding: 20px 70px 30px 30px
 	background: transparent
@@ -22,9 +43,6 @@ body
 		font-weight: 700
 		margin-left: 5px	
 		display: none	
-
-.section-home
-	padding-top: 20px
 
 .search
 	position: relative
@@ -78,12 +96,74 @@ body
 		transform: scale(1.04)
 
 .top-userpic
-	cursor: pointer		
+	cursor: pointer	
 
-.main
+//Sidebar
+.sidebar
+	margin-left: 32px
+	padding:  20px 0 40px 0
 	display: flex
-	width: 100%
-	position: relative
+	flex-direction: column
+	justify-content: space-between
+
+.sidebar-settings
+	display: flex
+	cursor: pointer
+	.sidebar-settings__image
+		margin-right: 12px
+	.sidebar-settings__text
+		font-size: 16px
+		line-height: 20px
+		color: #C2C2C2
+		margin: 0
+
+.subscriptions
+	width: 160px
+	.subscriptions-header
+		font-size: 18px		
+		line-height: 23px
+		margin: 0 0 30px 0
+		font-weight: 700
+	.subscriptions-item
+		display: flex
+		align-items: center	
+		margin-bottom: 23px
+		cursor: pointer
+		transition: .1s all
+		.subscriptions-item__image
+		 	margin-right: 10px	
+		.subscriptions-item__text
+			color: #898989
+			margin: 0
+			line-height: 20px
+			font-size: 16px
+	.subscriptions-item:hover
+		transform: translateX(5px)				
+
+.categories
+	width: 135px
+	.categories-item
+		display: flex
+		align-items: center	
+		margin-bottom: 29px
+		cursor: pointer
+		transition: .1s all
+		.categories-item__image
+		 	margin-right: 17px	
+		.categories-item__text
+			color: #898989
+			margin: 0
+			line-height: 20px
+			font-size: 16px	
+	.categories-item.categories-item_active
+		.categories-item__text
+			color: $red-color
+	.categories-item.categories-item_spaced
+		margin-bottom: 60px
+	.categories-item:hover
+		transform: translateX(5px)	
+
+//Content general
 
 .content
 	margin: 0 70px 0 65px
@@ -93,6 +173,14 @@ body
 			width: 100%
 			min-height: 100px
 			display: block
+
+.content-main
+	display: flex
+	.content-navigation
+		display: flex
+		margin: 0
+		padding: 0
+		list-style: none
 
 .content-header
 	margin: 30px 0 20px 0
@@ -122,80 +210,6 @@ body
 		.content-subscribe__icon
 			align-self: center
 			margin-right: 20px
-
-.sidebar-settings
-	display: flex
-	cursor: pointer
-	.sidebar-settings__image
-		margin-right: 12px
-	.sidebar-settings__text
-		font-size: 16px
-		line-height: 20px
-		color: #C2C2C2
-		margin: 0
-
-.sidebar
-	margin-left: 32px
-	padding:  20px 0 40px 0
-	display: flex
-	flex-direction: column
-	justify-content: space-between
-
-.subscriptions
-	width: 160px
-	.subscriptions-header
-		font-size: 18px		
-		line-height: 23px
-		margin: 0 0 30px 0
-		font-weight: 700
-
-	.subscriptions-item
-		display: flex
-		align-items: center	
-		margin-bottom: 23px
-		cursor: pointer
-		transition: .1s all
-		.subscriptions-item__image
-		 	margin-right: 10px	
-		.subscriptions-item__text
-			color: #898989
-			margin: 0
-			line-height: 20px
-			font-size: 16px
-	.subscriptions-item:hover
-		transform: translateX(5px)
-				
-
-.categories
-	width: 135px
-	.categories-item
-		display: flex
-		align-items: center	
-		margin-bottom: 29px
-		cursor: pointer
-		transition: .1s all
-		.categories-item__image
-		 	margin-right: 17px	
-		.categories-item__text
-			color: #898989
-			margin: 0
-			line-height: 20px
-			font-size: 16px	
-	.categories-item.categories-item_active
-		.categories-item__text
-			color: $red-color
-	.categories-item.categories-item_spaced
-		margin-bottom: 60px
-	.categories-item:hover
-		transform: translateX(5px)		
-
-.content-main
-	display: flex
-	.content-navigation
-		display: flex
-		margin: 0
-		padding: 0
-		list-style: none
 
 .content-player
 	display: flex
@@ -253,6 +267,8 @@ body
 		display: none			
 
 
+//Recommended
+
 .recommended
 	.recommended__title
 		color: #C2C2C2
@@ -280,10 +296,19 @@ body
 		transform: translateX(5px)
 
 
+//Videoplayer
 .videoplayer
 	display: flex
 	margin: 0 53px 0 80px
 	.videoplayer-main
+		.videoplayer-info__more
+			position: absolute
+			top: 13px
+			right: 20px
+			cursor: pointer
+			display: none
+			img
+				display: block
 		.videoplayer-img
 			position: relative
 			.videoplayer-navigation
@@ -475,6 +500,8 @@ body
 				color: #C2C2C2
 				margin: 0							 
 
+//Toggle button 
+
 .toggle
 	display: flex
 	align-items: center
@@ -536,6 +563,8 @@ input:checked + .slider:before
 .slider.round:before 
 	border-radius: 50%
 
+
+//Image gallery
 
 .gallery-small
 	width: 100%
@@ -682,16 +711,4 @@ input:checked + .slider:before
 			background: $red-color
 			img
 				transform: scale(1.1)			
-
-.button-regular
-	background: $red-color
-	padding: 10px 20px			
-	border-radius: 20px
-	color: #fff
-	text-decoration: none
-	cursor: pointer
-	transition: .2s ease
-	&:hover
-		background: #CD0000
-		color: #ffffff		
 
