Changed HTML tags for more appropriate semantic tags

--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -440,7 +440,7 @@ $red-color: #FF0000
 			display: none
 
 	.header
-		.header_right
+		.header-content_right
 			display: flex
 			align-items: center
 			.mobile-nav
