--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -137,8 +137,7 @@ body
 			margin: 0
 			line-height: 20px
 			font-size: 16px
-	.subscriptions-item:hover
-		transform: translateX(5px)				
+		
 
 .categories
 	width: 135px
@@ -160,8 +159,6 @@ body
 			color: $red-color
 	.categories-item.categories-item_spaced
 		margin-bottom: 60px
-	.categories-item:hover
-		transform: translateX(5px)	
 
 //Content general
 
@@ -292,8 +289,6 @@ body
 			font-weight: 700
 			color: #19202C
 			margin: 0
-	.recommended-item:hover
-		transform: translateX(5px)
 
 
 //Videoplayer
@@ -392,6 +387,7 @@ body
 				line-height: 20px
 				color: #192646
 				transition: .2s all
+				cursor: pointer
 				&:hover
 					background: #D8D8D8				
 		.videoplayer-more
@@ -607,9 +603,6 @@ input:checked + .slider:before
 					display: block
 					transition: .1s all
 					object-fit: cover
-			&:hover
-				.gallery-small__image
-					transform: scale(1.04)
 
 .gallery-medium
 	overflow: hidden
@@ -655,8 +648,7 @@ input:checked + .slider:before
 				opacity: 0.3
 				border-radius: 12px		
 				color: #ffffff
-			&:hover .gallery-medium__thumbnail .gallery-medium__image	
-				transform: scale(1.04)		 		
+ 		
 
 .gallery-header
 	display: flex
@@ -676,7 +668,7 @@ input:checked + .slider:before
 		margin-right: 20px
 	.gallery-header__image.gallery-img_small
 		width: 50px
-		height: 50px	
+		height: 50px
 
 	.gallery-header__title
 		font-weight: 700
@@ -696,6 +688,7 @@ input:checked + .slider:before
 		display: flex
 		justify-content: space-between	
 		.gallery-navigation__item
+			cursor: pointer
 			height: 28px
 			width: 28px
 			border-radius: 50%
@@ -705,10 +698,3 @@ input:checked + .slider:before
 			justify-content: center
 			overflow: hidden
 			transition: .1s all
-			img
-				transition: .1s all
-		.gallery-navigation__item:hover
-			background: $red-color
-			img
-				transform: scale(1.1)			
-
