Implemented scroll functionalities in galleries

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -562,11 +562,19 @@ input:checked + .slider:before
 
 //Image gallery
 
+.gallery-small__wrapper, .gallery-medium__wrapper
+	-ms-overflow-style: none
+	scrollbar-width: none
+
+.gallery-small__wrapper::-webkit-scrollbar, .gallery-medium__wrapper::-webkit-scrollbar
+	display: none
+
 .gallery-small
 	width: 100%
 	overflow: hidden
 	.gallery-small__wrapper
 		display: flex
+		overflow: auto
 		.gallery-small__item
 			margin-right: 40px	
 			cursor: pointer		
@@ -609,6 +617,7 @@ input:checked + .slider:before
 	padding: 50px 0
 	.gallery-medium__wrapper
 		display: flex
+		overflow: auto
 		.gallery-medium__item
 			margin-right: 40px
 			cursor: pointer
