--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,5 +1,13 @@
 $red-color: #FF0000
 
+@import 'modules/_galleries'
+@import 'modules/_toggle'
+@import 'modules/_sidebar'
+@import 'modules/_header'
+@import 'modules/_recommended'
+@import 'modules/_videoplayer'
+@import 'modules/_button-regular'
+
 *
 	box-sizing: border-box
 
@@ -17,154 +25,10 @@ body
 	width: 100%
 	position: relative
 
-.button-regular
-	background: $red-color
-	padding: 10px 20px			
-	border-radius: 20px
-	color: #fff
-	text-decoration: none
-	cursor: pointer
-	transition: .2s ease
-	&:hover
-		background: #CD0000
-		color: #ffffff
-
-//Header
-.header
-	padding: 20px 70px 30px 30px
-	background: transparent
-	display: flex
-	align-items: center
-	.mobile-nav
-		display: none
-	.mobile-title
-		font-size: 16px
-		line-height: 20px
-		font-weight: 700
-		margin-left: 5px	
-		display: none	
-
-.search
-	position: relative
-	.search-input
-		border: none
-		outline: none
-		width: 830px
-		height: 44px
-		background: #EBEBEB	 
-		border-radius: 22px	
-		padding: 0 35px 0 23px
-	.search-icon
-		position: absolute
-		right: 13px
-		top: 13px
-
-.logo 
-	margin-left: 28px
-	margin-right: 60px
-	display: flex
-	.logo-button
-		margin-right: 4px
-	.logo-text
-		width: 100px
-		height: 23px
-
-.top-navigation
-	display: flex
-	justify-content: space-between
-	width: 175px
-	margin-right: 45px
-	margin-left: 505px
-	.top-navigation__item
-		position: relative
-		cursor: pointer	
-		transition: .1s all
-		.top-navigation__alert
-			font-size: 12px
-			width: 18px
-			height: 18px
-			border-radius: 50%
-			background: $red-color
-			display: flex
-			justify-content: center
-			align-items: center
-			color: #FFFFFF
-			position: absolute
-			top: -5px
-			left: 50%
-	.top-navigation__item:hover
-		transform: scale(1.04)
-
-.top-userpic
-	cursor: pointer	
-
-//Sidebar
-.sidebar
-	margin-left: 32px
-	padding:  20px 0 40px 0
-	display: flex
-	flex-direction: column
-	justify-content: space-between
-
-.sidebar-settings
-	display: flex
-	cursor: pointer
-	.sidebar-settings__image
-		margin-right: 12px
-	.sidebar-settings__text
-		font-size: 16px
-		line-height: 20px
-		color: #C2C2C2
-		margin: 0
-
-.subscriptions
-	width: 160px
-	.subscriptions-header
-		font-size: 18px		
-		line-height: 23px
-		margin: 0 0 30px 0
-		font-weight: 700
-	.subscriptions-item
-		display: flex
-		align-items: center	
-		margin-bottom: 23px
-		cursor: pointer
-		transition: .1s all
-		.subscriptions-item__image
-		 	margin-right: 10px	
-		.subscriptions-item__text
-			color: #898989
-			margin: 0
-			line-height: 20px
-			font-size: 16px
-		
-
-.categories
-	width: 135px
-	.categories-item
-		display: flex
-		align-items: center	
-		margin-bottom: 29px
-		cursor: pointer
-		transition: .1s all
-		.categories-item__image
-		 	margin-right: 17px	
-		.categories-item__text
-			color: #898989
-			margin: 0
-			line-height: 20px
-			font-size: 16px	
-	.categories-item.categories-item_active
-		.categories-item__text
-			color: $red-color
-	.categories-item.categories-item_spaced
-		margin-bottom: 60px
-
-//Content general
-
 .content
 	margin: 0 70px 0 65px
 	width: 1598px
+
 	.content-top
 		.content-top__image
 			width: 100%
@@ -173,6 +37,7 @@ body
 
 .content-main
 	display: flex
+
 	.content-navigation
 		display: flex
 		margin: 0
@@ -185,25 +50,32 @@ body
 	display: flex
 	align-items: flex-start
 	justify-content: space-between
+
 	.content-info
 		display: flex
 		align-items: center
+
 		.info-userpic
 			margin-right: 14px
+
 		.info-description
 			padding: 15px 0
+
 		.info-description__title
 			font-size: 26px
 			line-height: 33px
 			color: #19202C
 			margin: 0
+
 		.info-description__text
 			font-size: 13px
 			line-height: 16px
 			color: #C2C2C2
 			margin: 0
+
 	.content-subscribe
 		display: flex
+
 		.content-subscribe__icon
 			align-self: center
 			margin-right: 20px
@@ -211,18 +83,22 @@ body
 .content-player
 	display: flex
 	margin: 60px 205px 60px 0
+
 	.player-image
 		.player-image__pic
 			display: block
+
 	.player-description
 		width: 580px
 		padding: 17px 0 15px 32px
+
 		.player-title
 			margin: 0 0 10px 0
 			font-size: 26px
 			line-height: 34px
 			color: #19202C
 			max-width: 430px
+
 		.player-text
 			margin: 0 0 30px 0
 			font-size: 16px
@@ -230,6 +106,7 @@ body
 			color: #000000
 			mix-blend-mode: normal
 			opacity: 0.6
+
 		.player-info
 			font-size: 16px
 			line-height: 22px
@@ -239,8 +116,10 @@ body
 .content-navigation
 	display: flex
 	align-items: center
+
 	.nav-item
 		margin-right: 70px
+
 		.nav-item__link
 			font-size: 18px
 			line-height: 23px
@@ -250,460 +129,18 @@ body
 			align-items: center
 			transition: .1s all
 			border-bottom: 2px solid transparent
+
 	.nav-item:not(:last-child):hover
 		.nav-item__link
 			color: $red-color
 			border-bottom: 2px solid $red-color
-			border-radius: 1px							
+			border-radius: 1px
+
 	.nav-item.nav-item_active
 		.nav-item__link
 			color: $red-color
 			border-bottom: 2px solid $red-color
 			border-radius: 1px
+
 	.nav-item.nav-item_more
-		display: none			
-
-
-//Recommended
-
-.recommended
-	.recommended__title
-		color: #C2C2C2
-		font-size: 16px
-		line-height: 20px	
-		margin: 0 0 30px 0
-		font-weight: 400	
-	.recommended-item
-		display: flex
-		margin-bottom: 30px
-		transition: .1s all
-		cursor: pointer
-		align-items: center
-		.recommended-item__image
-			margin-right: 20px
-			height: 50px
-			width: 50px
-		.recommended-item__name
-			font-size: 18px
-			line-height: 23px
-			font-weight: 700
-			color: #19202C
-			margin: 0
-
-
-//Videoplayer
-.videoplayer
-	display: flex
-	margin: 0 53px 0 80px
-	.videoplayer-main
-		.videoplayer-info__more
-			position: absolute
-			top: 13px
-			right: 20px
-			cursor: pointer
-			display: none
-			img
-				display: block
-		.videoplayer-img
-			position: relative
-			.videoplayer-navigation
-				width: 100%
-				position: absolute
-				bottom: 0
-				left: 0
-				display: flex
-				flex-direction: column
-				padding: 0 33px 20px 33px
-				.videoplayer-time
-					width: 100%
-					display: flex
-					justify-content: space-between
-					color: white
-					font-size: 22px
-					line-height: 28px					
-				.videoplayer-progress
-					width: 100%
-					padding: 20px 0
-					.videoplayer-progress_left,
-					.videoplayer-progress_right
-						display: none
-					.videoplayer-progress__image
-						width: 100%
-						object-fit: cover
-						padding: 0 6px
-				.videoplayer-controls
-					width: 100%
-					display: flex
-					justify-content: space-between
-					.videoplayer-controls_left,
-					.videoplayer-controls_right
-						display: flex
-						align-items: center
-					.videoplayer-controls__item
-						cursor: pointer	
-					.videoplayer-controls_left
-						.videoplayer-controls__item:not(:last-child)
-							margin-right: 40px
-					.videoplayer-controls_right
-						.videoplayer-controls__item:not(:last-child)
-							margin-right: 27px									
-		.videoplayer-img__item
-			display: block
-	.videoplayer-title
-		font-weight: 700
-		font-size: 36px
-		line-height: 45px
-		color: #192646	
-		margin: 20px 0 4px 0
-	.videoplayer-navigation	
-		display: flex
-		justify-content: space-between
-		align-items: flex-end
-		padding-bottom: 15px
-		.videoplayer-navigation__wrapper
-			display: flex
-			align-items: center
-		.videoplayer-navigation__text
-			font-weight: 400
-			font-size: 20px
-			line-height: 25px
-			color: #C2C2C2
-		.videoplayer-buttons
-			width: 320px
-			display: flex
-			align-items: center
-			justify-content: space-between	
-			.video-button
-				display: flex
-				align-items: center
-				justify-content: space-between
-				width: 100px
-				height: 40px
-				border-radius: 20px
-				background: #EBEBEB
-				text-decoration: none
-				padding: 10px 20px
-				font-size: 16px
-				line-height: 20px
-				color: #192646
-				transition: .2s all
-				cursor: pointer
-				&:hover
-					background: #D8D8D8				
-		.videoplayer-more
-			text-decoration: none
-			margin-left: 40px
-	.videoplayer-summary
-		border-top: 1px solid rgba(216, 216, 216, 0.5)
-		display: flex
-		justify-content: space-between
-		padding: 37px 0 48px
-		.videoplayer-description
-			display: flex
-			.videoplayer-description__text
-				width: 820px
-				margin-left: 12px
-				.videoplayer-description__category
-					margin: 0 0 4px 0 
-					font-weight: 700
-					font-size: 26px
-					line-height: 33px
-					color: #19202C
-				.videoplayer-description__date,
-				.videoplayer-description__views
-					font-weight: 400
-					font-size: 13px
-					line-height: 16px
-					color: #C2C2C2	
-				.videoplayer-description__views
-					display: none
-				.videoplayer-description__summary
-					margin: 14px 0
-					font-size: 16px
-					line-height: 22px
-					color: #000000
-					mix-blend-mode: normal
-					opacity: 0.6
-				.videoplayer-description__more
-					font-weight: 400
-					font-size: 20px
-					line-height: 25px
-					color: #C2C2C2	
-					cursor: pointer
-					transform: .1s all
-				.videoplayer-description__more:hover
-					text-decoration: underline					
-		.videoplayer-button
-			flex-shrink: 0
-			background: $red-color
-			padding: 10px 20px			
-			border-radius: 20px
-			color: #fff
-			text-decoration: none
-			cursor: pointer
-			transition: .2s ease
-			align-self: start
-		.videoplayer-button:hover
-			background: #FF3838
-			color: #ffffff
-	
-	.videoplayer-playlist
-		margin-left: 40px
-		max-height: 1100px
-		overflow: hidden
-		.playlist-header
-			display: flex
-			justify-content: space-between
-			align-items: center
-			margin: 0 0 25px 0
-			.playlist-header__title
-				font-size: 36px
-				line-height: 45px
-				color: #19202C
-				margin: 0		
-		.playlist-item
-			margin-bottom: 23px
-			.playlist-item__image
-				margin: 0
-				position: relative
-				vertical-align: top
-				.playlist-image__item
-					display: block				
-				.playlist-item__duration
-					position: absolute
-					right: 10px
-					bottom: 10px
-					background: #000000
-					opacity: 0.3
-					border-radius: 12px	
-					padding: 3px 10px 3px 8px
-					font-size: 14px
-					line-height: 18px
-					text-align: right
-					color: #FFFFFF
-			.playlist-item__description
-				margin-top: 13px									
-			.playlist-item__title
-				font-size: 26px
-				line-height: 33px
-				color: #19202C
-				margin: 0 0 11px 0
-			.playlist-item__text
-				display: flex
-				justify-content: space-between
-				font-size: 18px
-				line-height: 23px
-				color: #C2C2C2
-				margin: 0							 
-
-//Toggle button 
-
-.toggle
-	display: flex
-	align-items: center
-	.switch-text
-		font-size: 16px
-		line-height: 20px
-		letter-spacing: 1px
-		text-transform: uppercase
-		color: #19202C		
-
-.switch 
-	position: relative
-	display: inline-block
-	width: 44px
-	height: 28px
-	margin-left: 11px
-
-.switch input 
-	opacity: 0
-	width: 0
-	height: 0
-
-.slider 
-	position: absolute
-	cursor: pointer
-	top: 0
-	left: 0
-	right: 0
-	bottom: 0
-	background-color: #F9F9F9
-	-webkit-transition: .4s
-	transition: .4s
-
-.slider:before 
-	position: absolute
-	content: ""
-	height: 24px
-	width: 24px
-	left: 2px
-	bottom: 2px
-	background-color: #CCCCCC
-	-webkit-transition: .4s
-	transition: .4s
-
-input:checked + .slider:before
-	background-color: #2196F3
-
-input:focus + .slider 
-	box-shadow: 0 0 1px #2196F3
-
-input:checked + .slider:before 
-	-webkit-transform: translateX(20px)
-	-ms-transform: translateX(20px)
-	transform: translateX(20px)
-
-.slider.round 
-	border-radius: 28px
-
-.slider.round:before 
-	border-radius: 50%
-
-
-//Image gallery
-
-.gallery-small__wrapper, .gallery-medium__wrapper
-	-ms-overflow-style: none
-	scrollbar-width: none
-
-.gallery-small__wrapper::-webkit-scrollbar, .gallery-medium__wrapper::-webkit-scrollbar
-	display: none
-
-.gallery-small
-	width: 100%
-	overflow: hidden
-	.gallery-small__wrapper
-		display: flex
-		overflow: auto
-		.gallery-small__item
-			margin-right: 40px	
-			cursor: pointer		
-			.gallery-small__description
-				padding-bottom: 4px
-				.small-item__title
-					font-weight: 700
-					margin: 8px 0 6px
-					font-size: 16px
-					line-height: 20px
-					color: #19202C
-				.small-item__text
-					display: flex
-					justify-content: space-between
-					color: #C2C2C2
-					font-size: 13px
-					line-height: 16px
-					margin: 0	
-			.gallery-small__thumbnail
-				position: relative
-				overflow: hidden
-				border-radius: 14px
-				.gallery-small__duration
-					position: absolute
-					right: 10px
-					bottom: 10px
-					background: rgba(0, 0, 0, 0.3)	
-					padding: 3px 10px 3px 8px
-					font-size: 14px
-					line-height: 18px
-					color: #ffffff
-					border-radius: 12px
-				.gallery-small__image
-					display: block
-					transition: .1s all
-					object-fit: cover
-
-.gallery-medium
-	overflow: hidden
-	padding: 50px 0
-	.gallery-medium__wrapper
-		display: flex
-		overflow: auto
-		.gallery-medium__item
-			margin-right: 40px
-			cursor: pointer
-			.gallery-medium__thumbnail
-				position: relative
-				overflow: hidden
-				border-radius: 14px
-				.gallery-medium__image
-					transition: .2s all
-			.medium-item__title
-				font-weight: 700
-				font-size: 16px
-				line-height: 20px
-				color: #19202C
-				margin: 10px 0 5px 0				
-			.medium-item__text
-				display: flex
-				justify-content: space-between
-				font-weight: 400
-				font-size: 12px
-				line-height: 15px
-				color: #C2C2C2
-				margin: 0
-				.medium-text__wrapper
-					width: 155px
-					display: flex
-					justify-content: space-between
-					align-items: center
-					margin: 0
-			.gallery-medium__duration
-				position: absolute
-				bottom: 10px
-				right: 10px
-				padding: 3px 9px
-				background: #000000
-				mix-blend-mode: normal
-				opacity: 0.3
-				border-radius: 12px		
-				color: #ffffff
- 		
-
-.gallery-header
-	display: flex
-	align-items: flex-end
-	padding-right: 150px
-	margin: 0 0 30px 0 
-	position: relative
-	justify-content: space-between
-	.gallery-header_right, 
-	.gallery-header_left
-		display: flex
-		align-items: center
-	.gallery-header_right
-		.gallery-navigation
-			margin-left: 40px 	
-	.gallery-header__image
-		margin-right: 20px
-	.gallery-header__image.gallery-img_small
-		width: 50px
-		height: 50px
-
-	.gallery-header__title
-		font-weight: 700
-		font-size: 26px
-		line-height: 33px
-		color: #19202C
-		margin: 0
-	.gallery-header__text
-		margin: 0 0 0 20px 
-		font-weight: 400
-		font-size: 16px
-		line-height: 24px
-		color: #C2C2C2				
-	.gallery-navigation
-		width: 66px
-		height: 28px
-		display: flex
-		justify-content: space-between	
-		.gallery-navigation__item
-			cursor: pointer
-			height: 28px
-			width: 28px
-			border-radius: 50%
-			background: #B7B7B7
-			display: flex
-			align-items: center
-			justify-content: center
-			overflow: hidden
-			transition: .1s all
+		display: none
