Changed main header behavior to sticky

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -16,6 +16,7 @@ body
 	padding: 0
 	font-family: 'Mulish', sans-serif
 	background: #F2F2F2
+	position: relative
 
 .section-home
 	padding-top: 20px
