--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -3,6 +3,10 @@
 	background: transparent
 	display: flex
 	align-items: center
+	position: fixed
+	width: 100%
+	z-index: 999
+	background: #F2F2F2
 
 	.mobile-nav
 		display: none
