Switched to relative positioning instead of absolute for subscribe button in gallery

--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -59,7 +59,7 @@ $red-color: #FF0000
 			width: calc(100% - 372px)
 
 	.gallery-header
-		padding: 0
+		padding-right: 5px
 		.gallery-header_right
 			.gallery-navigation
 				margin-left: 20px
