--- a/src/sass/modules/_galleries.sass
+++ b/src/sass/modules/_galleries.sass
@@ -113,7 +113,7 @@
 .gallery-header
 	display: flex
 	align-items: flex-end
-	padding-right: 150px
+	padding-right: 9.186%
 	margin: 0 0 30px 0 
 	position: relative
 	justify-content: space-between
