Added SVG icons as main option, included fallback to regular png images

--- a/src/sass/modules/_galleries.sass
+++ b/src/sass/modules/_galleries.sass
@@ -104,9 +104,8 @@
 				bottom: 10px
 				right: 10px
 				padding: 3px 9px
-				background: #000000
+				background: rgba(0, 0, 0, 0.3)
 				mix-blend-mode: normal
-				opacity: 0.3
 				border-radius: 12px		
 				color: #ffffff 		
 
