--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -21,6 +21,14 @@
 .search
 	position: relative
 
+	.search-icon__wrap
+		position: absolute
+		right: 13px
+		top: 13px	
+		width: 19px
+		height: 19px
+		background: url('../../build/images/search.svg')
+
 	.search-input
 		border: none
 		outline: none
@@ -72,9 +80,6 @@
 			position: absolute
 			top: -5px
 			left: 50%
-			
-	.top-navigation__item:hover
-		transform: scale(1.04)
 
 .top-userpic
 	cursor: pointer
