--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -387,43 +387,16 @@ $red-color: #FF0000
 						width: auto					
 	
 	.sidebar
-		justify-content: center	
-		background: #FFFFFF
-		border-top: 1px solid #F1F1F1
-		position: fixed
-		bottom: 0
-		left: 0	
-		z-index: 1	
-		width: 100%
-		height: 60px
-		margin: 0
-		padding: 0
-		.sidebar__wrapper
-			overflow: auto
-			.sidebar__categories
-				width: 100%
-				margin: 0
-				display: flex
-				flex-direction: row
-				.categories__item				
-					flex-direction: column
-					justify-content: space-between	
-					width: auto	
-					margin: 0
-					width: 100px
-					min-width: 25%	
-					height: 37px
-					.categories-item__image
-						margin: 0
-					.categories-item__text
-						font-size: 10px
-						line-height: 13px
+		display: none
 
 	.sidebar__subscriptions
 		display: none
 
 	.sidebar-settings
 		display: none				
+
+	.sidebar-mobile
+		display: flex
 
 	.header.header-home
 		.mobile-nav
