--- a/src/sass/modules/_sidebar.sass
+++ b/src/sass/modules/_sidebar.sass
@@ -68,3 +68,38 @@
 			
 	.categories-item.categories-item_spaced
 		margin-bottom: 60px
+
+.sidebar-mobile
+	display: none
+	justify-content: center	
+	background: #FFFFFF
+	border-top: 1px solid #F1F1F1
+	position: fixed
+	bottom: 0
+	left: 0	
+	z-index: 1	
+	width: 100%
+	height: 61px
+	margin: 0
+	padding: 0
+	justify-content: space-between
+	align-items: center
+
+	.sidebar-mobile__item	
+		display: flex 		
+		flex-direction: column
+		justify-content: center
+		align-items: center	
+		width: auto	
+		margin: 0
+		width: 100px
+		min-width: 25%	
+		height: 37px
+
+		.mobile-item__image
+			margin: 0 0 7px 0
+
+		.mobile-item__text
+			margin: 0
+			font-size: 10px
+			line-height: 13px			
